[tool.poetry]
name = "cosmicpython"
version = "0.1.0"
description = ""
authors = ["gitavk <3apa3ka3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
